fix overflowing

--- a/styles/body.css
+++ b/styles/body.css
@@ -1,5 +1,5 @@
 section.goat {
-    height: 100vh;
+    height: calc(100vh - 72px);
     width: 100vw;
     display: flex;
     justify-content: center;
